# template

./: COPYING  Cargo.toml  README.md  README.tpl  cargo-generate.toml
.github/workflows/: fast-pr-check.yml  lints.yml
license/: APACHE  MIT
src/: lib.rs
