[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2018"
authors = ["{{authors}}"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/{{project-name}}/0.1.0"
homepage = "https://github.com/{{authors}}/{{project-name}}"
repository = "https://github.com/{{authors}}/{{project-name}}"

[dependencies]
